--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Game/Graphics toolkit built with Reason",
   "main": "index.js",
   "scripts": {
+    "build": "esy b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
