File.openAsync API (#1)
* Add simple script to make a binary file with predictable sequence

* Start stubbing out File, add LWT dependencies

* Update lockfile

* Start sketching out a binary file open API

* Initial File.openAsync API

--- a/examples/dune
+++ b/examples/dune
@@ -1,8 +1,12 @@
 (executable
     (name Bin)
+    (preprocess (pps lwt_ppx))
     (public_name Bin)
     (js_of_ocaml)
     (libraries
         js_of_ocaml
         Revery
             ))
+(install
+    (section bin)
+    (files binary.dat index.html Bin.bc.js))
