Add 'Shaders' folder

--- a/examples/dune
+++ b/examples/dune
@@ -1,12 +1,15 @@
 (executable
     (name Bin)
     (preprocess (pps lwt_ppx))
+    (package Revery)
     (public_name Bin)
     (js_of_ocaml)
     (libraries
         js_of_ocaml
         Revery
+        Revery_Shaders
             ))
 (install
     (section bin)
+    (package Revery)
     (files binary.dat index.html Bin.bc.js))
