Add gl-matrix-min dependency to get working on web

--- a/examples/dune
+++ b/examples/dune
@@ -11,4 +11,4 @@
 (install
     (section bin)
     (package Revery)
-    (files binary.dat index.html Bin.bc.js))
+    (files binary.dat index.html Bin.bc.js gl-matrix-min.js))
