Clear background completely with window width / height

--- a/src/Core/dune
+++ b/src/Core/dune
@@ -2,4 +2,5 @@
     (name Revery_Core)
     (public_name Revery_Core)
     (js_of_ocaml (javascript_files file.js))
+    (cxx_names file)
     (libraries lwt lwt.unix reglfw flex fontkit))
