--- a/src/Core/dune
+++ b/src/Core/dune
@@ -1,4 +1,6 @@
 (library
     (name Revery_Core)
     (public_name Revery_Core)
+    (js_of_ocaml (javascript_files file.js))
+    (cxx_names file)
     (libraries lwt lwt.unix reglfw flex fontkit))
