Update dune files

--- a/examples/dune
+++ b/examples/dune
@@ -1,8 +1,8 @@
 (executables
-    (name Bin Autocomplete)
+    (names Bin Autocomplete)
     (preprocess (pps lwt_ppx))
     (package Revery)
-    (public_name Bin Autocomplete)
+    (public_names Bin Autocomplete)
     (js_of_ocaml)
     (libraries
         js_of_ocaml
