Start auto-complete example app (#23)
* Add Autocomplete example

* Fix up dune file

* Update dune files

* Start creating autocomplete example

* Add key press callback primitive

* Remove window frame

* Add options for window width, height, and backgroundColor

* Update window API to have setPos

* Position window centered

* Add filtering based on text input

* Bring in Str library

* Fix linux build error?

--- a/examples/dune
+++ b/examples/dune
@@ -1,11 +1,12 @@
-(executable
-    (name Bin)
+(executables
+    (names Bin Autocomplete)
     (preprocess (pps lwt_ppx))
     (package Revery)
-    (public_name Bin)
+    (public_names Bin Autocomplete)
     (js_of_ocaml)
     (libraries
         js_of_ocaml
+        str
         Revery
         flex
             ))
