--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Game/Graphics toolkit built with Reason",
   "main": "index.js",
   "scripts": {
-    "build": "esy b",
+    "build": "esy b --root . -j4",
     "build:js": "esy b dune build examples/Bin.bc.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
