Remove resolutions; use npm packages

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@esy-ocaml/reason": "^3.3.7",
     "reason-fontkit": "^1.0.0",
     "reason-glfw": "^3.2.1001",
+    "reason-fontkit": "^1.1.0",
     "reason-gl-matrix": "^0.2.0",
     "reason-reactify": "^1.0.1",
     "@opam/lwt": "^4.0.0",
@@ -36,10 +37,6 @@
     "@opam/dune": "^1.5.0",
     "flex": "^1.2.2",
     "@opam/js_of_ocaml-compiler": "*"
-  },
-  "resolutions": {
-    "reason-glfw": "github:bryphe/reason-glfw#55c2b56",
-    "reason-fontkit": "github:bryphe/reason-fontkit#5b405be"
   },
   "peerDependencies": {
     "ocaml": "~4.6.0"
