--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@opam/js_of_ocaml": "*",
     "@opam/js_of_ocaml-lwt": "*",
     "flex": "^1.2.2",
-    "@opam/js_of_ocaml-compiler": "*"
+    "@opam/js_of_ocaml-compiler": "*",
+    "rejest": "^1.2.0"
   },
   "peerDependencies": {
     "ocaml": "~4.6.0"
@@ -43,7 +44,6 @@
   "devDependencies": {
     "ocaml": "~4.6.0",
     "@opam/merlin": "*",
-    "@opam/dune": "^1.5.0",
-    "rejest": "^1.2.0"
+    "@opam/dune": "^1.5.0"
   }
 }
