--- a/.ci/restore-build-cache.yml
+++ b/.ci/restore-build-cache.yml
@@ -10,13 +10,13 @@ steps:
         branchName: 'refs/heads/master'
         buildVersionToDownload: 'latestFromBranch'
         downloadType: 'single'
-        artifactName: 'build-cache-$(Agent.OS)-source-tarballs'
+        artifactName: 'cache-$(Agent.OS)-source-tarballs'
         downloadPath: '$(System.ArtifactsDirectory)'
     continueOnError: true
 
   - task: CopyFiles@2
     inputs:
-        sourceFolder: '$(System.ArtifactsDirectory)\build-cache-$(Agent.OS)-source-tarballs'
+        sourceFolder: '$(System.ArtifactsDirectory)\cache-$(Agent.OS)-source-tarballs'
         targetFolder: '$(ESY__CACHE_SOURCE_TARBALL_PATH)'
 
   - task: DownloadBuildArtifacts@0
@@ -28,12 +28,12 @@ steps:
         branchName: 'refs/heads/master'
         buildVersionToDownload: 'latestFromBranch'
         downloadType: 'single'
-        artifactName: 'build-cache-$(Agent.OS)-install'
+        artifactName: 'cache-$(Agent.OS)-install'
         downloadPath: '$(System.ArtifactsDirectory)'
     continueOnError: true
 
   - task: CopyFiles@2
     inputs:
-        sourceFolder: '$(System.ArtifactsDirectory)\build-cache-$(Agent.OS)-install'
+        sourceFolder: '$(System.ArtifactsDirectory)\cache-$(Agent.OS)-install'
         targetFolder: '$(ESY__CACHE_INSTALL_PATH)'
     continueOnError: true
