--- a/.ci/restore-build-cache.yml
+++ b/.ci/restore-build-cache.yml
@@ -18,6 +18,7 @@ steps:
     inputs:
         sourceFolder: '$(System.ArtifactsDirectory)\cache-$(Agent.OS)-source-tarballs'
         targetFolder: '$(ESY__CACHE_SOURCE_TARBALL_PATH)'
+    continueOnError: true
 
   - task: DownloadBuildArtifacts@0
     displayName: 'Cache: Restore install'
