--- a/.ci/restore-build-cache.yml
+++ b/.ci/restore-build-cache.yml
@@ -1,40 +1,40 @@
 # Steps for restoring project cache
 
-steps:
-  - task: DownloadBuildArtifacts@0
-    displayName: 'Cache: Restore source-tarballs'
-    inputs:
-        buildType: 'specific'
-        project: 'revery'
-        pipeline: 'build'
-        branchName: 'refs/heads/master'
-        buildVersionToDownload: 'latestFromBranch'
-        downloadType: 'single'
-        artifactName: 'cache-$(Agent.OS)-source-tarballs'
-        downloadPath: '$(System.ArtifactsDirectory)'
-    continueOnError: true
+# steps:
+#   - task: DownloadBuildArtifacts@0
+#     displayName: 'Cache: Restore source-tarballs'
+#     inputs:
+#         buildType: 'specific'
+#         project: 'revery'
+#         pipeline: 'build'
+#         branchName: 'refs/heads/master'
+#         buildVersionToDownload: 'latestFromBranch'
+#         downloadType: 'single'
+#         artifactName: 'cache-$(Agent.OS)-source-tarballs'
+#         downloadPath: '$(System.ArtifactsDirectory)'
+#     continueOnError: true
 
-  - task: CopyFiles@2
-    inputs:
-        sourceFolder: '$(System.ArtifactsDirectory)\cache-$(Agent.OS)-source-tarballs'
-        targetFolder: '$(ESY__CACHE_SOURCE_TARBALL_PATH)'
-    continueOnError: true
+#   - task: CopyFiles@2
+#     inputs:
+#         sourceFolder: '$(System.ArtifactsDirectory)\cache-$(Agent.OS)-source-tarballs'
+#         targetFolder: '$(ESY__CACHE_SOURCE_TARBALL_PATH)'
+#     continueOnError: true
 
-  - task: DownloadBuildArtifacts@0
-    displayName: 'Cache: Restore install'
-    inputs:
-        buildType: 'specific'
-        project: 'revery'
-        pipeline: 'build'
-        branchName: 'refs/heads/master'
-        buildVersionToDownload: 'latestFromBranch'
-        downloadType: 'single'
-        artifactName: 'cache-$(Agent.OS)-install'
-        downloadPath: '$(System.ArtifactsDirectory)'
-    continueOnError: true
+#   - task: DownloadBuildArtifacts@0
+#     displayName: 'Cache: Restore install'
+#     inputs:
+#         buildType: 'specific'
+#         project: 'revery'
+#         pipeline: 'build'
+#         branchName: 'refs/heads/master'
+#         buildVersionToDownload: 'latestFromBranch'
+#         downloadType: 'single'
+#         artifactName: 'cache-$(Agent.OS)-install'
+#         downloadPath: '$(System.ArtifactsDirectory)'
+#     continueOnError: true
 
-  - task: CopyFiles@2
-    inputs:
-        sourceFolder: '$(System.ArtifactsDirectory)\cache-$(Agent.OS)-install'
-        targetFolder: '$(ESY__CACHE_INSTALL_PATH)'
-    continueOnError: true
+#   - task: CopyFiles@2
+#     inputs:
+#         sourceFolder: '$(System.ArtifactsDirectory)\cache-$(Agent.OS)-install'
+#         targetFolder: '$(ESY__CACHE_INSTALL_PATH)'
+#     continueOnError: true
