--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -16,6 +16,7 @@ jobs:
   steps:
   - script: sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libegl1-mesa-dev mesa-utils mesa-utils-extra ragel
   - template: esy-build-steps.yml
+  - template: publish-build-cache.yml
 
 - job: MacOS
   pool:
@@ -29,6 +30,7 @@ jobs:
   - script: brew update
   - script: brew install libpng
   - template: esy-build-steps.yml
+  - template: publish-build-cache.yml
 
 - job: Windows
   pool:
@@ -39,7 +41,7 @@ jobs:
     ESY__CACHE_SOURCE_TARBALL_PATH: C:\Users\VssAdministrator\.esy\source-tarballs
 
   steps:
-  - template: restore-build-cache.yml
+  # - template: restore-build-cache.yml
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
 
