CI: Remove caching temporarily (get builds green) (#68)
* Fix up CI

* Use build definition name

* Make pipeline name / definition name generic

* Remove debugging echos

--- a/.ci/restore-build-cache.yml
+++ b/.ci/restore-build-cache.yml
@@ -5,8 +5,8 @@ steps:
     displayName: 'Cache: Restore source-tarballs'
     inputs:
         buildType: 'specific'
-        project: 'revery'
-        pipeline: 'build'
+        project: '$(System.TeamProject)'
+        pipeline: '$(Build.DefinitionName)'
         branchName: 'refs/heads/master'
         buildVersionToDownload: 'latestFromBranch'
         downloadType: 'single'
@@ -24,8 +24,8 @@ steps:
     displayName: 'Cache: Restore install'
     inputs:
         buildType: 'specific'
-        project: 'revery'
-        pipeline: 'build'
+        project: '$(System.TeamProject)'
+        pipeline: '$(Build.DefinitionName)'
         branchName: 'refs/heads/master'
         buildVersionToDownload: 'latestFromBranch'
         downloadType: 'single'
