--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -4,11 +4,11 @@ steps:
   - task: NodeTool@0
     inputs:
       versionSpec: '8.9'
-  - script: npm install -g esy@0.3.4
+  - script: npm install -g esy@0.4.3
+    displayName: 'npm install -g esy@0.4.3'
   - script: esy install
-    continueOnError: true
-  - script: esy install
-    continueOnError: true
-  - script: esy install
+    displayName: 'esy install'
   - script: esy build
+    displayName: 'esy build'
   - script: esy b dune runtest
+    displayName: 'esy b dune runtest'
