--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "esy-installer Revery.install",
         "esy-installer Revery_Core.install",
         "esy-installer Revery_Geometry.install",
+        "esy-installer Revery_Math.install",
         "esy-installer Revery_Shaders.install",
         "esy-installer Revery_UI.install"
     ]
