Skip restoring cache for now

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -44,6 +44,6 @@ jobs:
     ESY__CACHE_SOURCE_TARBALL_PATH: C:\Users\VssAdministrator\.esy\source-tarballs
 
   steps:
-  - template: restore-build-cache.yml
+  # - template: restore-build-cache.yml
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
