Add ragel dependency

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -28,7 +28,7 @@ jobs:
 
   steps:
   - script: brew update
-  - script: brew install libpng
+  - script: brew install libpng ragel
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
 
