Azure CI: Fix up caching strategy (#81)
* Fix up caching strategy

* Set timeout to max while caching is being set up

* Add ragel dependency

* Skip restoring cache for now

* Switch back to esy@0.3.4

* Flip esy build back

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -6,6 +6,7 @@
 name: $(Build.SourceVersion)
 jobs:
 - job: Linux
+  timeoutInMinutes: 0
   pool:
     vmImage: 'Ubuntu 16.04'
 
@@ -19,6 +20,7 @@ jobs:
   - template: publish-build-cache.yml
 
 - job: MacOS
+  timeoutInMinutes: 0
   pool:
     vmImage: 'macOS 10.13'
 
@@ -28,11 +30,12 @@ jobs:
 
   steps:
   - script: brew update
-  - script: brew install libpng
+  - script: brew install libpng ragel
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
 
 - job: Windows
+  timeoutInMinutes: 0
   pool:
     vmImage: 'vs2017-win2016'
 
@@ -41,22 +44,6 @@ jobs:
     ESY__CACHE_SOURCE_TARBALL_PATH: C:\Users\VssAdministrator\.esy\source-tarballs
 
   steps:
-  # - template: restore-build-cache.yml
+  - template: restore-build-cache.yml
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
-
-- job: Release
-  displayName: Release
-  dependsOn:
-      - Linux
-      - MacOS
-      - Windows
-  condition: succeeded()
-  pool:
-     vmImage: ubuntu-16.04
-  steps:
-    - task: PublishBuildArtifacts@1
-      displayName: 'Release Package'
-      inputs:
-          PathtoPublish: '.'
-          ArtifictName: npm-package
