--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -11,11 +11,16 @@ jobs:
     vmImage: 'Ubuntu 16.04'
 
   variables:
-    ESY__CACHE_INSTALL_PATH: /home/vsts/.esy/3_____________________________________________________________________/i/
-    ESY__CACHE_SOURCE_TARBALL_PATH: /home/vsts/.esy/source-tarballs
+    STAGING_DIRECTORY: /home/vsts/STAGING
+    STAGING_DIRECTORY_UNIX: /home/vsts/STAGING
+    ESY__CACHE_INSTALL_PATH: /home/vsts/.esy/3_____________________________________________________________________/i
+    ESY__CACHE_SOURCE_TARBALL_PATH: /home/vsts/.esy/source/i
+    # ESY__NPM_ROOT: /opt/hostedtoolcache/node/8.14.0/x64/lib/node_modules/esy
 
   steps:
   - script: sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libegl1-mesa-dev mesa-utils mesa-utils-extra ragel
+  - template: use-node.yml
+  - template: restore-build-cache.yml
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
 
@@ -25,12 +30,17 @@ jobs:
     vmImage: 'macOS 10.13'
 
   variables:
-    ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i/
-    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source-tarballs
+    STAGING_DIRECTORY: /Users/vsts/STAGING
+    STAGING_DIRECTORY_UNIX: /Users/vsts/STAGING
+    ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i
+    ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source/i
+    # ESY__NPM_ROOT: /usr/local/lib/node_modules/esy
 
   steps:
   - script: brew update
   - script: brew install libpng ragel
+  - template: use-node.yml
+  - template: restore-build-cache.yml
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
 
@@ -40,10 +50,14 @@ jobs:
     vmImage: 'vs2017-win2016'
 
   variables:
-    ESY__CACHE_INSTALL_PATH: C:\Users\VssAdministrator\.esy\3_\i
-    ESY__CACHE_SOURCE_TARBALL_PATH: C:\Users\VssAdministrator\.esy\source-tarballs
+    STAGING_DIRECTORY: C:\Users\VssAdministrator\STAGING
+    STAGING_DIRECTORY_UNIX: /C/Users/VssAdministrator/STAGING
+    ESY__CACHE_INSTALL_PATH: /C/Users/VssAdministrator/.esy/3_/i
+    ESY__CACHE_SOURCE_TARBALL_PATH: /C/Users/VssAdministrator/.esy/source/i
+    # ESY__NPM_ROOT: /C/npm/prefix/node_modules/esy
 
   steps:
+  - template: use-node.yml
   - template: restore-build-cache.yml
   - template: esy-build-steps.yml
   - template: publish-build-cache.yml
