--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -4,7 +4,7 @@ steps:
   - task: NodeTool@0
     inputs:
       versionSpec: '8.9'
-  - script: npm install -g esy@0.4.3
+  - script: npm install -g esy@0.4.3 --unsafe-perm
     displayName: 'npm install -g esy@0.4.3'
   - script: esy install
     displayName: 'esy install'
