--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -4,8 +4,8 @@ steps:
   - task: NodeTool@0
     inputs:
       versionSpec: '8.9'
-  - script: npm install -g esy@0.4.3 --unsafe-perm
-    displayName: 'npm install -g esy@0.4.3'
+  - script: npm install -g @esy-nightly/esy --unsafe-perm
+    displayName: 'npm install -g @esy-nightly/esy'
   - script: esy install
     displayName: 'esy install'
     continueOnError: true
