--- a/src/UI/dune
+++ b/src/UI/dune
@@ -1,4 +1,5 @@
 (library
     (name Revery_UI)
     (public_name Revery_UI)
+    (preprocess (pps lwt_ppx))
     (libraries lwt lwt.unix reglfw flex fontkit reactify Revery_Core Revery_Shaders Revery_Geometry Revery_Math))
