--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "reason-fontkit": "^1.1.0",
     "reason-gl-matrix": "^0.2.0",
     "reason-reactify": "^2.1.0",
+    "@opam/color": "^0.2.0",
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/js_of_ocaml": "*",
