--- a/examples/dune
+++ b/examples/dune
@@ -1,8 +1,8 @@
 (executables
-    (names Bin Autocomplete Flexbox Boxshadow Border)
+    (names Hello Autocomplete Flexbox Boxshadow Border)
     (preprocess (pps lwt_ppx))
     (package Revery)
-    (public_names Bin Autocomplete Flexbox Boxshadow Border)
+    (public_names Hello Autocomplete Flexbox Boxshadow Border)
     (js_of_ocaml)
     (libraries
         js_of_ocaml
@@ -13,4 +13,4 @@
 (install
     (section bin)
     (package Revery)
-    (files Roboto-Regular.ttf binary.dat index.html Bin.bc.js gl-matrix-min.js outrun-logo.png))
+    (files Roboto-Regular.ttf binary.dat index.html Hello.bc.js gl-matrix-min.js outrun-logo.png))
