--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
-    "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce"
+    "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
+    "@esy-ocaml/reason": "facebook/reason#ab49908"
   },
   "peerDependencies": {
     "ocaml": "~4.6.0"
