Add missed install step for Revery_UI_Components

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "esy-installer Revery_Geometry.install",
         "esy-installer Revery_Math.install",
         "esy-installer Revery_Shaders.install",
-        "esy-installer Revery_UI.install"
+        "esy-installer Revery_UI.install",
+        "esy-installer Revery_UI_Coimponents.install"
     ]
   },
   "dependencies": {
