--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
-    "@esy-ocaml/reason": "facebook/reason#ab49908"
+    "@esy-ocaml/reason": "facebook/reason#ab49908",
+    "reason-gl-matrix": "github:bryphe/reason-gl-matrix#8cefa56"
   },
   "peerDependencies": {
     "ocaml": "~4.6.0"
