--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,6 @@ jobs:
 
   steps:
   - template: .ci/use-node.yml
-  # - template: .ci/restore-build-cache.yml
+  - template: .ci/restore-build-cache.yml
   - template: .ci/esy-build-steps.yml
   - template: .ci/publish-build-cache.yml
