WIP segfault debugging

--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
-    "build": ["dune build --root . -j4"],
+    "build": [
+      "dune build --root . -j4"
+    ],
     "install": [
-        "esy-installer Revery.install",
-        "esy-installer Revery_Core.install",
-        "esy-installer Revery_Geometry.install",
-        "esy-installer Revery_Math.install",
-        "esy-installer Revery_Shaders.install",
-        "esy-installer Revery_UI.install",
-        "esy-installer Revery_UI_Components.install"
+      "esy-installer Revery.install",
+      "esy-installer Revery_Core.install",
+      "esy-installer Revery_Geometry.install",
+      "esy-installer Revery_Math.install",
+      "esy-installer Revery_Shaders.install",
+      "esy-installer Revery_UI.install",
+      "esy-installer Revery_UI_Components.install"
     ]
   },
   "dependencies": {
     "@esy-ocaml/reason": "^3.3.7",
-    "reason-glfw": "^3.2.1010",
-    "reason-fontkit": "^2.0.4",
+    "reason-glfw": "*",
+    "reason-fontkit": "*",
     "reason-gl-matrix": "^0.9.9301",
     "reason-reactify": "^2.2.1",
     "@opam/color": "^0.2.0",
@@ -43,7 +45,9 @@
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
-    "@esy-ocaml/reason": "facebook/reason#ab49908"
+    "@esy-ocaml/reason": "facebook/reason#ab49908",
+    "reason-fontkit": "link:../reason-fontkit",
+    "reason-glfw": "link:../reason-glfw"
   },
   "peerDependencies": {
     "ocaml": "~4.6.0"
