--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.3.1",
   "description": "App toolkit built with Reason",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/bryphe/revery/issues"
-  },
+  "bugs": { "url": "https://github.com/bryphe/revery/issues" },
   "scripts": {
     "build": "esy b",
     "build:js": "esy b dune build examples/Bin.bc.js",
@@ -13,41 +11,41 @@
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
-    "build": ["dune build --root . -j4"],
+    "build": [ "dune build --root . -j4" ],
     "install": [
-        "esy-installer Revery.install",
-        "esy-installer Revery_Core.install",
-        "esy-installer Revery_Geometry.install",
-        "esy-installer Revery_Math.install",
-        "esy-installer Revery_Shaders.install",
-        "esy-installer Revery_UI.install",
-        "esy-installer Revery_UI_Components.install"
+      "esy-installer Revery.install", "esy-installer Revery_Core.install",
+      "esy-installer Revery_Geometry.install",
+      "esy-installer Revery_Math.install",
+      "esy-installer Revery_Shaders.install",
+      "esy-installer Revery_UI.install",
+      "esy-installer Revery_UI_Components.install"
     ]
   },
   "dependencies": {
     "@esy-ocaml/reason": "^3.3.7",
-    "reason-glfw": "^3.2.1010",
-    "reason-fontkit": "^2.0.4",
-    "reason-gl-matrix": "^0.9.9301",
-    "reason-reactify": "^2.2.1",
     "@opam/color": "^0.2.0",
+    "@opam/core": "v0.11.3",
+    "@opam/js_of_ocaml": "*",
+    "@opam/js_of_ocaml-compiler": "*",
+    "@opam/js_of_ocaml-lwt": "*",
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
-    "@opam/js_of_ocaml": "*",
-    "@opam/js_of_ocaml-lwt": "*",
     "flex": "^1.2.2",
-    "@opam/js_of_ocaml-compiler": "*",
+    "reason-fontkit": "^2.0.4",
+    "reason-gl-matrix": "^0.9.9301",
+    "reason-glfw": "^3.2.1010",
+    "reason-reactify": "^2.2.1",
     "rejest": "^1.2.0"
   },
   "resolutions": {
     "@opam/cmdliner": "1.0.2",
-    "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
-    "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
+    "@opam/js_of_ocaml":
+      "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
+    "@opam/js_of_ocaml-compiler":
+      "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
     "@esy-ocaml/reason": "facebook/reason#ab49908"
   },
-  "peerDependencies": {
-    "ocaml": "~4.6.0"
-  },
+  "peerDependencies": { "ocaml": "~4.6.0" },
   "devDependencies": {
     "ocaml": "~4.6.0",
     "@opam/merlin": "*",
