--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@esy-ocaml/reason": "^3.3.7",
     "reason-glfw": "^3.2.1010",
     "reason-fontkit": "^2.0.5",
-    "reason-gl-matrix": "^0.9.9301",
+    "reason-gl-matrix": "^0.9.9302",
     "@opam/color": "^0.2.0",
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
@@ -43,8 +43,7 @@
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
     "@esy-ocaml/reason": "facebook/reason#ab49908",
-    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#f545ba0",
-    "reason-gl-matrix": "github:bryphe/reason-gl-matrix#c1109d7"
+    "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#f545ba0"
   },
   "peerDependencies": {
     "ocaml": "^4.7.0"
