--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ]
   },
   "dependencies": {
-    "@esy-ocaml/reason": "^3.3.7",
+    "@esy-ocaml/reason": "3.4.0",
     "reason-glfw": "^3.2.1010",
     "reason-fontkit": "^2.0.5",
     "reason-gl-matrix": "^0.9.9302",
@@ -42,7 +42,6 @@
     "@opam/cmdliner": "1.0.2",
     "@opam/js_of_ocaml": "github:ocsigen/js_of_ocaml:js_of_ocaml.opam#db257ce",
     "@opam/js_of_ocaml-compiler": "github:ocsigen/js_of_ocaml:js_of_ocaml-compiler.opam#db257ce",
-    "@esy-ocaml/reason": "facebook/reason#ab49908",
     "@brisk/brisk-reconciler": "github:briskml/brisk-reconciler#f545ba0"
   },
   "peerDependencies": {
