--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
   },
   "homepage": "https://github.com/bryphe/revery#readme",
   "esy": {
-    "build": ["dune build --root . -j4"],
+    "build": [
+      "dune build --root . -j4"
+    ],
     "install": [
-        "esy-installer Revery.install",
-        "esy-installer Revery_Core.install",
-        "esy-installer Revery_Geometry.install",
-        "esy-installer Revery_Math.install",
-        "esy-installer Revery_Shaders.install",
-        "esy-installer Revery_UI.install",
-        "esy-installer Revery_UI_Components.install"
+      "esy-installer Revery.install",
+      "esy-installer Revery_Core.install",
+      "esy-installer Revery_Geometry.install",
+      "esy-installer Revery_Math.install",
+      "esy-installer Revery_Shaders.install",
+      "esy-installer Revery_UI.install",
+      "esy-installer Revery_UI_Components.install"
     ]
   },
   "dependencies": {
     "@esy-ocaml/reason": "3.4.0",
-    "reason-glfw": "^3.2.1010",
+    "reason-glfw": "^3.2.1011",
     "reason-fontkit": "^2.0.5",
     "reason-gl-matrix": "^0.9.9302",
     "@opam/color": "^0.2.0",
