--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -12,8 +12,8 @@ steps:
     displayName: 'check that `esy.lock` is up-to-date. If this fails, commit `esy.lock` changes and re-submit PR.'
   - script: esy build
     displayName: 'esy build'
-  - script: esy format
-    displayName: esy format
+  - script: esy ci:format
+    displayName: esy ci:format
   - script: git diff --exit-code
     displayName: 'check that formatting is correct. If this fails, run `esy format` and re-submit PR.'
   - script: esy b dune runtest
